==> MikroElektronika/mikrosdk_v2/targets/pic_8bit/mikroe/pic18/src/uart/implementation_2/hal_ll_uart.c <==
#include "hal_ll_pps.h"
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_uart.h"
#include "hal_ll_uart_pin_map.h"
#include "assembly.h"
#define hal_ll_uart_get_module_state_address ((hal_ll_uart_handle_register_t *)*handle)
#define hal_ll_uart_get_handle (hal_ll_uart_handle_register_t *)hal_ll_uart_get_module_state_address->hal_ll_uart_handle
#define hal_ll_uart_get_base_struct(_handle) ((const hal_ll_uart_base_handle_t *)_handle)
#define hal_ll_uart_get_base_from_hal_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_handle_register_t *)\
                                             (((hal_ll_uart_handle_register_t *)(handle))->hal_ll_uart_handle))->hal_ll_uart_handle)->base
#define hal_ll_uart_get_base_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_get_handle)->hal_ll_uart_handle))->base
#define hal_ll_uart_wait_for_sync(_hal_sync_val) while( _hal_sync_val-- ){assembly(nop);}
#define hal_ll_pin(port_name) (port_name & HAL_LL_NIBBLE_LOW_8BIT)
#define hal_ll_port(port_name) ((port_name & HAL_LL_NIBBLE_HIGH_8BIT) >> 4)
#define HAL_LL_UART_ACCEPTABLE_ERROR (float)1.0
#define hal_ll_get_system_clock (Get_Fosc_kHz()*1000)
#define hal_ll_uart_get_baud(_clock,_baud,_div) (((_clock/(float)_baud)/_div)-1)
#define hal_ll_uart_get_real_baud(_clock,_baud,_div) (_clock/(_div*(_baud+1)))
#define hal_ll_uart_get_baud_error(_baud_real,_baud) (((float)(abs(_baud_real-_baud))/_baud)*100)

void hal_ll_uart_close( handle_t *handle ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_uart_get_specifics( hal_ll_uart_get_module_state_address );

    if( low_level_handle->hal_ll_uart_handle != NULL ) {
        hal_ll_uart_set_module_power(hal_ll_uart_hw_specifics_map_local, true);

        // Used only for chips which have I2C PPS pins
        #if HAL_LL_UART_PPS_ENABLED == true
        hal_ll_pps_set_state(hal_ll_uart_hw_specifics_map_local, false);
        #endif

        hal_ll_uart_irq_disable(handle, HAL_LL_UART_IRQ_RX);
        hal_ll_uart_irq_disable(handle, HAL_LL_UART_IRQ_TX);

        hal_ll_uart_clear_regs(hal_ll_uart_hw_specifics_map_local->base);
        hal_ll_uart_set_module_power(hal_ll_uart_hw_specifics_map_local, false);

        hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pin_name = HAL_LL_PIN_NC;
        hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pin_name = HAL_LL_PIN_NC;

        hal_ll_uart_hw_specifics_map_local->baud_rate.baud = 115200UL;
        hal_ll_uart_hw_specifics_map_local->baud_rate.real_baud = 0;

        irq_handler = NULL;
        objects[ hal_ll_uart_find_index( handle ) ] = 0;

        low_level_handle->hal_ll_uart_handle = NULL;
        low_level_handle->hal_drv_uart_handle = NULL;

        low_level_handle->init_ll_state = false;
    }
}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_uart_get_specifics( hal_ll_uart_get_module_state_address );

    switch ( irq )
    {
        case HAL_LL_UART_IRQ_RX:
            __HAL_LL_UART_DISABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index,
                                      hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pir_num );
            break;

        case HAL_LL_UART_IRQ_TX:
            __HAL_LL_UART_DISABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index,
                                      hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pir_num );
            break;

        default:
            break;
    }

    // Check if module interrupt flags are set or not
    if ( ( !check_reg_bit( hal_ll_uart_ivt_map[ hal_ll_uart_hw_specifics_map_local->module_index ].hal_ll_uart_ivt_pir_reg_addr,
                           hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pir_num ) ) &&
         ( !check_reg_bit( hal_ll_uart_ivt_map[ hal_ll_uart_hw_specifics_map_local->module_index ].hal_ll_uart_ivt_pir_reg_addr,
                           hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pir_num ) ) )
    {
        switch ( hal_ll_uart_hw_specifics_map_local->module_index )
        {
            #ifdef UART_MODULE_1
            case hal_ll_uart_module_num(UART_MODULE_1):
                hal_ll_core_disable_irq( HAL_LL_IRQ_U1RXIE_BIT );
                break;
            #endif
            #ifdef UART_MODULE_2
            case hal_ll_uart_module_num(UART_MODULE_2):
                hal_ll_core_disable_irq( HAL_LL_IRQ_U2RXIE_BIT );
                break;
            #endif
            #ifdef UART_MODULE_3
            case hal_ll_uart_module_num(UART_MODULE_3):
                hal_ll_core_disable_irq( HAL_LL_IRQ_U3RXIE_BIT );
                break;
            #endif
            #ifdef UART_MODULE_4
            case hal_ll_uart_module_num(UART_MODULE_4):
                hal_ll_core_disable_irq( HAL_LL_IRQ_U4RXIE_BIT );
                break;
            #endif
            #ifdef UART_MODULE_5
            case hal_ll_uart_module_num(UART_MODULE_5):
                hal_ll_core_disable_irq( HAL_LL_IRQ_U5RXIE_BIT );
                break;
            #endif

            default:
                break;
        }
    }
}

static uint8_t hal_ll_uart_find_index( handle_t *handle ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_uart_get_specifics( hal_ll_uart_get_module_state_address );

    if( hal_ll_uart_hw_specifics_map_local->base->uart_ucon0_reg_addr != HAL_LL_MODULE_ERROR ) {
        return hal_ll_uart_hw_specifics_map_local->module_index;
    } else {
        return NULL;
    }
}

static void hal_ll_uart_set_module_power( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    switch ( map->module_index )
    {
        #ifdef UART_MODULE_1
        #ifdef HAL_LL_PMD_UART1_ADDRESS
        case hal_ll_uart_module_num(UART_MODULE_1):
            ( hal_ll_state == true )?(clear_reg_bit( HAL_LL_PMD_UART1_ADDRESS, HAL_LL_UART1_MODULE_BIT )):(set_reg_bit( HAL_LL_PMD_UART1_ADDRESS, HAL_LL_UART1_MODULE_BIT ));
            break;
        #endif
        #endif
        #ifdef UART_MODULE_2
        #ifdef HAL_LL_PMD_UART2_ADDRESS
        case hal_ll_uart_module_num(UART_MODULE_2):
            ( hal_ll_state == true )?(clear_reg_bit( HAL_LL_PMD_UART2_ADDRESS, HAL_LL_UART2_MODULE_BIT )):(set_reg_bit( HAL_LL_PMD_UART2_ADDRESS, HAL_LL_UART2_MODULE_BIT ));
            break;
        #endif
        #endif
        #ifdef UART_MODULE_3
        #ifdef HAL_LL_PMD_UART3_ADDRESS
        case hal_ll_uart_module_num(UART_MODULE_3):
            ( hal_ll_state == true )?(clear_reg_bit( HAL_LL_PMD_UART3_ADDRESS, HAL_LL_UART3_MODULE_BIT )):(set_reg_bit( HAL_LL_PMD_UART3_ADDRESS, HAL_LL_UART3_MODULE_BIT ));
            break;
        #endif
        #endif
        #ifdef UART_MODULE_4
        #ifdef HAL_LL_PMD_UART4_ADDRESS
        case hal_ll_uart_module_num(UART_MODULE_4):
            ( hal_ll_state == true )?(clear_reg_bit( HAL_LL_PMD_UART4_ADDRESS, HAL_LL_UART4_MODULE_BIT )):(set_reg_bit( HAL_LL_PMD_UART4_ADDRESS, HAL_LL_UART4_MODULE_BIT ));
            break;
        #endif
        #endif
        #ifdef UART_MODULE_5
        #ifdef HAL_LL_PMD_UART5_ADDRESS
        case hal_ll_uart_module_num(UART_MODULE_5):
            ( hal_ll_state == true )?(clear_reg_bit( HAL_LL_PMD_UART5_ADDRESS, HAL_LL_UART5_MODULE_BIT )):(set_reg_bit( HAL_LL_PMD_UART5_ADDRESS, HAL_LL_UART5_MODULE_BIT ));
            break;
        #endif
        #endif

        default:
            break;
    }
}

static void hal_ll_uart_set_baud_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);
    uint32_t hal_ll_baud_value = hal_ll_uart_get_baud(hal_ll_get_system_clock,map->baud_rate.baud,4);
    uint32_t hal_ll_baud_real_value = hal_ll_uart_get_real_baud(hal_ll_get_system_clock,hal_ll_baud_value,4);

    // If error greater than specified, cancel setting baud rate
    if( (float)hal_ll_uart_get_baud_error(hal_ll_baud_real_value,map->baud_rate.baud) > HAL_LL_UART_ACCEPTABLE_ERROR ) {
        map->baud_rate.real_baud = hal_ll_uart_get_baud_error(hal_ll_baud_real_value,map->baud_rate.baud);
    } else {
        map->baud_rate.real_baud = hal_ll_baud_real_value;

        set_reg_bit( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_BRGS_BIT );

        write_reg( hal_ll_hw_reg->uart_brgl_reg_addr, hal_ll_baud_value & HAL_LL_NIBBLE_LOW_16BIT );

        write_reg( hal_ll_hw_reg->uart_brgh_reg_addr, hal_ll_baud_value >> 8 );
    }
}

static void hal_ll_uart_set_stop_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    switch ( map->stop_bit )
    {
        case HAL_LL_UART_STOP_BITS_ONE:
            // ONE STOP BIT BY DEFAULT AFTER RESET
            break;
        case HAL_LL_UART_STOP_BITS_ONE_AND_A_HALF:
            set_reg_bit( hal_ll_hw_reg->uart_ucon2_reg_addr, HAL_LL_UART_STP_STOP_BITS_ONE_AND_A_HALF );
            break;
        case HAL_LL_UART_STOP_BITS_TWO:
            write_reg( hal_ll_hw_reg->uart_ucon2_reg_addr, HAL_LL_UART_STP_STOP_BITS_TWO_MASK );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    switch ( map->data_bit )
    {
        case HAL_LL_UART_DATA_BITS_7:
            set_reg_bit( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_MODE_7_BIT );
            break;
        case HAL_LL_UART_DATA_BITS_8:
            // 8-BIT MODE BY DEFAULT AFTER RESET
            break;
        case HAL_LL_UART_DATA_BITS_9:
            set_reg_bit( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_MODE_9_BIT );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_parity_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    switch ( map->parity )
    {
        case HAL_LL_UART_PARITY_NONE:
            // NO PARITY BY DEFAULT AFTER RESET
            break;
        case HAL_LL_UART_PARITY_EVEN:
            write_reg( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_PARITY_EVEN_MASK );
            break;
        case HAL_LL_UART_PARITY_ODD:
            set_reg_bit( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_PARITY_ODD_BIT );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_receiver( const hal_ll_uart_base_handle_t *hal_ll_hw_reg, hal_ll_uart_state_t pin_state ) {
    switch ( pin_state )
    {
        case HAL_LL_UART_DISABLE:
            clear_reg_bit( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_RXEN_BIT );
            break;

        case HAL_LL_UART_ENABLE:
            set_reg_bit( hal_ll_hw_reg->uart_ucon0_reg_addr, HAL_LL_UART_RXEN_BIT );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_clear_regs( const hal_ll_uart_base_handle_t *hal_ll_hw_reg ) {
    clear_reg( hal_ll_hw_reg->uart_ucon0_reg_addr );
    clear_reg( hal_ll_hw_reg->uart_ucon1_reg_addr );
    clear_reg( hal_ll_hw_reg->uart_ucon2_reg_addr );
}
